Mon Nov 16 17:40:39 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): optimize replaced leave
	  instruction copied to jump instruction too.

Mon Nov 16 16:39:38 2015  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb: Enable frozen_string_literal.

	* lib/set.rb: Move << out of the begin block that ensures pop.

Mon Nov 16 16:28:30 2015  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Hash#flatten!, #add?, #delete?, #collect!, #reject!,
	  #select!, #^, #classify): Micro-optimize some methods for
	  performance and readability.

Mon Nov 16 16:17:58 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ChangeLog: fixed accidentally commit.

Mon Nov 16 16:10:51 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* mkconfig.rb: Add some high-level documentation.
	  [ci skip][fix GH-1081] Patch by @ulfalizer

Mon Nov 16 15:59:14 2015  yui-knk  <spiketeika@gmail.com>

	* proc.c: Add call-seq of `Method#super_method`
	  [ci skip][fix GH-1094]

Mon Nov 16 15:58:39 2015  Kenichi Kamiya  <kachick1@gmail.com>

	* struct.c: Standardize a method signature of Struct#[]=.
	  [ci skip][fix GH-1095]

Mon Nov 16 15:42:36 2015  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (#>=, #>, #<=, #<): Make use of Hash#>=, #>, #<, and
	  #<= when comparing against an instance of the same kind.

Mon Nov 16 15:33:11 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* tool/rbinstall.rb: fix wrong permission for gem specification without
	  zlib runtime. [Bug #11685][ruby-dev:49343]

Mon Nov 16 12:11:11 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/webrick/httpauth/basicauth.rb: fix a typo.
	  [ci skip][fix GH-1099] Patch by @jwworth
	* lib/webrick/httpauth/digestauth.rb: ditto.

Sun Nov 15 18:28:43 2015  Kenichi Kamiya  <kachick1@gmail.com>

	* vm_method.c (set_method_visibility): should fail if the receiver
	  is frozen.  [ruby-core:71489] [Bug #11687]

Sat Nov 14 22:15:07 2015  Tanaka Akira  <akr@fsij.org>
