@@ -1,4 +1,7 @@
-Mon Nov 16 17:40:39 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Mon Nov 16 17:41:33 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* compile.c (iseq_peephole_optimize): optimize tail calls on aref
+	  and aset specialized instructions.
 
 	* compile.c (iseq_peephole_optimize): optimize replaced leave
 	  instruction copied to jump instruction too.
